adding swagger configuration
