# src/routes/team.route.js
@@ -5,14 +5,22 @@ var bodyParser = require('body-parser')
 var jsonParser = bodyParser.json();
 
 const teamsController = require('../controllers/team.controller');
+router.route('/')
+    .get(teamsController.getAll, () => {
+        // #swagger.tags = ['Team']
+        // #swagger.description = 'Endpoint to get soccer Team' 
+    });
 
 router.route('/')
-    .get(teamsController.getAll);
-
-router.route('/')
-    .post(jsonParser, teamsController.create);
+    .post(jsonParser, teamsController.create, () =>{
+        // #swagger.tags = ['Team']
+        // #swagger.description = 'Endpoint to post soccer Team'
+    });
 
 router.route('/:_id')
-    .get(teamsController.get);
+    .get(teamsController.get, () => {
+        // #swagger.tags = ['Team']
+        // #swagger.description = 'Endpoint to get soccer Team'
+    });
 
 module.exports = router;
