# src/routes/transfer.route.js
@@ -7,12 +7,21 @@ var jsonParser = bodyParser.json();
 const transferController = require('../controllers/transfer.controller');
 
 router.route('/')
-    .get(transferController.getAll);
+    .get(transferController.getAll, () => {
+        // #swagger.tags = ['Transfer']
+        // #swagger.description = 'Endpoint to get soccer Transfer'
+    });
 
 router.route('/transfer/:_id')
-    .get(transferController.get);
+    .get(transferController.get, () => {
+        // #swagger.tags = ['Transfer']
+        // #swagger.description = 'Endpoint to get soccer Transfer'
+    });
 
 router.route('/')
-    .post(jsonParser, transferController.create);
+    .post(jsonParser, transferController.create, () => {
+        // #swagger.tags = ['Transfer']
+        // #swagger.description = 'Endpoint to post soccer Transfer'
+    });
 
 module.exports = router;
